@@ -1,3 +1,8 @@
+2007-01-16  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/posix/system.c: Remove NO_WAITPID support, it cannot
+	really work anyway.
+
 2007-01-15  Ulrich Drepper  <drepper@redhat.com>
 
 	* nscd/connections.c (servinfo): Renamed to reqinfo.  Change all
